# viper

./: .clang-format  README.md  meson.build
src/: bitboard.c  bitboard.h  engine_types.h  move.c  move.h  movegen.c  movegen.h  position.c  position.h  utils.h  viper.c
